--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,7 +2,9 @@
     <h1>Pets List 🐶 </h1>
     <ul>
         <% @pets.each do |pet| %>
-            <li><%= pet.name %></li>
+            <li>
+                <%= link_to pet.name, pet_path(pet.id) %>
+            </li>
 
         <% end %>
     </ul>
